--- a/app/src/main/res/layout/fragment_gallery_picker.xml
+++ b/app/src/main/res/layout/fragment_gallery_picker.xml
@@ -3,18 +3,30 @@
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:background="@color/seperator_color"
               android:orientation="vertical">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="?actionBarSize"
-        android:background="@color/colorPrimary"
-        app:elevation="4dp"
-        app:navigationIcon="@drawable/ic_action_navigation_arrow_back_inverted"
-        app:title="Gallery"
-        app:titleTextColor="@color/pure_white"
-    />
+        android:layout_height="?actionBarSize">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?actionBarSize"
+            android:background="@color/colorPrimary"
+            app:navigationIcon="@drawable/ic_action_navigation_arrow_back_inverted"
+        >
+
+            <android.support.v7.widget.AppCompatSpinner
+                android:id="@+id/spinner"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+            />
+
+        </android.support.v7.widget.Toolbar>
+
+    </android.support.design.widget.AppBarLayout>
 
     <FrameLayout android:layout_width="match_parent"
                  android:layout_height="match_parent">
