--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -4,7 +4,7 @@
               xmlns:app="http://schemas.android.com/apk/res-auto"
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
-              android:layout_height="240dp"
+              android:layout_height="wrap_content"
               android:background="#225f83"
               android:gravity="center"
               android:orientation="vertical"
@@ -30,8 +30,9 @@
         android:gravity="center"
         android:lines="1"
         android:textColor="@color/pure_white"
-        android:textSize="32sp"
+        android:textSize="24sp"
         android:textStyle="bold"
+        android:layout_marginBottom="4dp"
         tools:text="FirstName LastName"/>
 
     <TextView
@@ -41,11 +42,11 @@
         android:layout_gravity="center_horizontal"
         android:ellipsize="end"
         android:gravity="center"
-        android:lines="2"
+        android:maxLines="2"
         android:text="College"
         android:textColor="@color/pure_white"
         android:textSize="16sp"
-        android:layout_marginBottom="4dp"/>
+        android:layout_marginBottom="24dp"/>
 
 
 </LinearLayout>
