--- a/app/src/main/res/layout/tool_overlay_text.xml
+++ b/app/src/main/res/layout/tool_overlay_text.xml
@@ -4,7 +4,7 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent">
 
-    <EditText
+    <com.linute.linute.UtilsAndHelpers.CustomBackPressedEditText
         android:id="@+id/text_top"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -18,7 +18,7 @@
         tools:text="Top Text"
     />
 
-    <EditText
+    <com.linute.linute.UtilsAndHelpers.CustomBackPressedEditText
         android:id="@+id/text_bot"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
